# statistical_learning_notes

./: example_usage.py  intersection_script.py  script.py  study_with_topic_generation.py  test.py  topics.py
01. Elements of Statistical Learning/: fix_math.py  test.py
01. Elements of Statistical Learning/03. Additive Models/: topics.json
01. Elements of Statistical Learning/04. Basis Expansion/: topics.json
01. Elements of Statistical Learning/05. Kernel Methods/: topics.md
01. Elements of Statistical Learning/06. Nearest Neighbors/: topics.md
01. Elements of Statistical Learning/09. Model Assessment and Selection/: topics.md
01. Elements of Statistical Learning/10. Model Inference and Averaging/: topics.md
01. Elements of Statistical Learning/11. Boosting/: topics.md
01. Linear Regression/: prompt.md  topics.json  topics.md
02. Linear Classification/: prompt.md  topics.json  topics.md
02. ML a Probabilistic Perspective/: split.py  test.py
03. Additive Models/: topics.md
04. Basis Expansion/: topics.md
05. Kernel Methods/: topics.json  topics.md
06. Nearest Neighbors/: topics.md
07. Support Vector Machines/: topics.md
08. Random Forests/: topics.md
11. Boosting/: topics.md
12. Ensemble Learning/: topics.md
14. High Dimensions Methods/: topics.md
agent/: chain.py  directory_processor.py  filename_handler.py  processor.py  tasks.yaml  topic_generator.py  topic_processor.py
study_agent/: README.md  pyproject.toml
study_agent/src/study_agent/: crew.py  main.py
study_agent/src/study_agent/config/: agents.yaml  tasks.yaml
(+1682 files in other folders)
